kyverno-project-6/baseline-policies/add-default-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-default-resources
spec:
  rules:
  - name: mutate-resources
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - (name): "?*"
            resources:
              +(requests):
                +(cpu): "100m"
                +(memory): "128Mi"
              +(limits):
                +(cpu): "500m"
                +(memory): "512Mi"
